# trac_ik

./: README.md
trac_ik_lib/: CMakeLists.txt  package.xml
trac_ik_lib/include/: nlopt.hpp
trac_ik_lib/include/trac_ik/: trac_ik.hpp
trac_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
trac_ik_python/: CMakeLists.txt  package.xml  setup.py
trac_ik_python/src/trac_ik_python/: trac_ik.py
trac_ik_python/swig/: trac_ik_wrap.i
